--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="uab_logo">UAB Logo</string>
     <string name="about_link">https://library.uab.edu/</string>
     <string name="support_link">https://www.robotemi.com/</string>
+    <string name="special_collections">Special Collections</string>
 </resources>
